--- a/Main/Source/Databases/The Guide/triggers/triggers.csproj
+++ b/Main/Source/Databases/The Guide/triggers/triggers.csproj
@@ -43,6 +43,7 @@
     <None Include="trg_GuideEntries_u.sql" />
     <None Include="trg_Topics_iu.sql" />
     <None Include="trg_Forums_u.sql" />
+    <None Include="trg_ThreadEntriesIPAddress_iu.sql" />
     <None Include="trg_Threads_iu.sql" />
     <None Include="trg_Users_iu.sql" />
   </ItemGroup>
