--- a/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
+++ b/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
@@ -1280,6 +1280,9 @@
     <None Include="addTermsFilterTerm.sql" />
     <None Include="commentratingcreate.sql" />
     <None Include="addbannedusersipaddress.sql" />
+    <None Include="ApplyUserReputation.sql" />
+    <None Include="ApplyUserReputations.sql" />
+    <None Include="GetUserReputationList.sql" />
     <None Include="updatetrackedmemberformodclass.sql" />
     <None Include="GetUserReputation.sql" />
     <None Include="updatetrackedmemberlistinternal.sql" />
