Added division to site manager page

--- a/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
+++ b/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
@@ -1282,6 +1282,7 @@
     <None Include="addbannedusersipaddress.sql" />
     <None Include="ApplyUserReputation.sql" />
     <None Include="ApplyUserReputations.sql" />
+    <None Include="getBBCDivisions.sql" />
     <None Include="GetUserReputationList.sql" />
     <None Include="updatetrackedmemberformodclass.sql" />
     <None Include="GetUserReputation.sql" />
