--- a/Release/Source/BBC.Dna/BBC.DNA.csproj
+++ b/Release/Source/BBC.Dna/BBC.DNA.csproj
@@ -125,6 +125,7 @@
     <Compile Include="ContentSignifAdminBuilder.cs" />
     <Compile Include="ContentSignifSettings.cs" />
     <Compile Include="ContentSignifSettingsParameters.cs" />
+    <Compile Include="UserReputationReportBuilder.cs" />
     <Compile Include="HostDashboardUserActivityFeed.cs" />
     <Compile Include="EditPostPageBuilder.cs" />
     <Compile Include="MBFrontPage.cs" />
