Functional tests fix and memcache switch over

--- a/Main/Source/Shared/TestUtils/TestUtils.csproj
+++ b/Main/Source/Shared/TestUtils/TestUtils.csproj
@@ -95,6 +95,7 @@
     </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.DirectoryServices" />
+    <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml" />
