--- a/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
+++ b/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
@@ -1283,7 +1283,7 @@
     <None Include="addbannedusersipaddress.sql" />
     <None Include="ApplyUserReputation.sql" />
     <None Include="ApplyUserReputations.sql" />
-    <None Include="gettermsbymodclassidfromthreadmod.sql" />
+    <None Include="gettermsbymodidfromthreadmod.sql" />
     <None Include="getuserstatus.sql" />
     <None Include="getBBCDivisions.sql" />
     <None Include="GetUserReputationList.sql" />
@@ -1349,7 +1349,7 @@
     <None Include="EditTopic2.sql" />
     <None Include="gettopicsforsiteID2.sql" />
     <None Include="getrecentcomments.sql" />
-    <None Include="GetTermsByModClassId.sql" />
+    <None Include="gettermsbymodclassid.sql" />
     <None Include="forumgetthreadlist_datecreated_includingstickythreads.sql" />
     <None Include="forumgetthreadlist_lastposted_includingstickythreads.sql" />
     <None Include="removethreadfromstickylist.sql" />
