Email notification when the terms section of the CommentsForumList admin page is updated

--- a/Main/Web.config
+++ b/Main/Web.config
@@ -68,6 +68,8 @@
     <add key="MaintenanceMode" value="0"/>
     <!-- The length in minutes to cache items to the default cache manager -->
     <add key="CacheSlidingWindow" value="5"/>
+    <!-- The email group to which the notification email would be sent when the Terms section of the CommentsForumList gets updated -->
+    <add key="ModerateEmailGroup" value="Value provided by the Moderation team"/>
     
   </appSettings>
   <system.web>
