Twitter user creation and mapping it to the DNAUserId

--- a/Main/Source/Shared/BBC.Dna.Users/BBC.Dna.Users.csproj
+++ b/Main/Source/Shared/BBC.Dna.Users/BBC.Dna.Users.csproj
@@ -102,6 +102,7 @@
   <ItemGroup>
     <Compile Include="AuthenticateUser.cs" />
     <Compile Include="CallingUser.cs" />
+    <Compile Include="ICallingExternalUser.cs" />
     <Compile Include="ICallingUser.cs" />
     <Compile Include="IUser.cs" />
     <Compile Include="ProfileAPI.cs" />
@@ -118,6 +119,7 @@
     <Compile Include="SignInComponentFactory.cs" />
     <Compile Include="SSOService.cs" />
     <Compile Include="SSOUser.cs" />
+    <Compile Include="CallingExternalUser.cs" />
     <Compile Include="User.cs" />
     <Compile Include="UserExceptions.cs" />
     <Compile Include="UserGroup.cs" />
