Adding sorting to various admin pages - refactored sort enum location

--- a/Main/Source/Shared/BBC.Dna.Common/BBC.Dna.Common.csproj
+++ b/Main/Source/Shared/BBC.Dna.Common/BBC.Dna.Common.csproj
@@ -76,6 +76,7 @@
     <Compile Include="SignalHelper.cs" />
     <Compile Include="SignalBase.cs" />
     <Compile Include="SignalStatus.cs" />
+    <Compile Include="sortingEnum.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BBC.Dna.Data\BBC.Dna.Data.csproj">
