Change in the twitter user credentials

--- a/Main/BBC.Dna.SocialAPI.Tests/App.config
+++ b/Main/BBC.Dna.SocialAPI.Tests/App.config
@@ -2,8 +2,8 @@
 <configuration>
   <appSettings>
     <add key="proxyserver" value="http://www-cache.reith.bbc.co.uk:80"/>
-    <add key="TwitterUserName" value="Srihari0309" />
-    <add key="TwitterPassword" value="sri030983" />
+    <add key="TwitterUserName" value="BBC_DNA_Search" />
+    <add key="TwitterPassword" value="WelCome12" />
   </appSettings>
   <system.serviceModel>
     <client>
