--- a/Release/Source/BBC.Dna/BBC.DNA.csproj
+++ b/Release/Source/BBC.Dna/BBC.DNA.csproj
@@ -394,6 +394,10 @@
       <Project>{2CE05465-9B21-4CD9-A592-FABD2AD051B3}</Project>
       <Name>BBC.Dna.Sites %28Source\Shared\BBC.Dna.Sites\BBC.Dna.Sites%29</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Shared\BBC.Dna.SocialAPI\BBC.Dna.SocialAPI.csproj">
+      <Project>{BD150CEF-5F42-4C4D-AA7D-C7760977DD4D}</Project>
+      <Name>BBC.Dna.SocialAPI %28Source\Shared\BBC.Dna.SocialAPI\BBC.Dna.SocialAPI%29</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Shared\BBC.Dna.Users\BBC.Dna.Users.csproj">
       <Project>{19609A9E-E93A-4106-8529-F3A6C7DE9BF7}</Project>
       <Name>BBC.Dna.Users %28Source\Shared\BBC.Dna.Users\BBC.Dna.Users%29</Name>
