--- a/Release/Source/Ripley/RipleyServer.vcproj
+++ b/Release/Source/Ripley/RipleyServer.vcproj
@@ -137,7 +137,7 @@
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
-				CommandLine="iisreset /stop&#x0D;&#x0A;Copy &quot;$(TargetPath)&quot; &quot;$(RipleyServerPath)&quot;&#x0D;&#x0A;Copy &quot;$(TargetPath)&quot; &quot;$(RipleyServerPath)&quot;\..\h2g2UnitTesting&#x0D;&#x0A;echo Built RipleyServer.dll &gt; &quot;$(TargetDir)CustomBuildOutput.txt&quot;&#x0D;&#x0A;iisreset /start&#x0D;&#x0A;"
+				CommandLine="echo $(RipleyServerPath)&#x0D;&#x0A;echo $(TargetDir)&#x0D;&#x0A;iisreset /stop&#x0D;&#x0A;Copy &quot;$(TargetPath)&quot; &quot;$(RipleyServerPath)&quot;&#x0D;&#x0A;Copy &quot;$(TargetPath)&quot; &quot;$(RipleyServerPath)&quot;\..\h2g2UnitTesting&#x0D;&#x0A;echo Built RipleyServer.dll &gt; &quot;$(TargetDir)CustomBuildOutput.txt&quot;&#x0D;&#x0A;iisreset /start&#x0D;&#x0A;"
 				Outputs="$(TargetDir)CustomBuildOutput.txt"
 			/>
 			<Tool
