--- a/Release/Web.config
+++ b/Release/Web.config
@@ -71,6 +71,10 @@
     <!-- The email group to which the notification email would be sent when the Terms section of the CommentsForumList gets updated -->
     <add key="ModerateEmailGroup" value="Value provided by the Moderation team"/>
     
+	<!-- Keys required for the twitter authentication -->
+	<add key="TwitterUserName" value="BBC_DNA_Search" />
+	<add key="TwitterPassword" value="WelCome12" />
+	
   </appSettings>
   <system.web>
 
@@ -152,11 +156,28 @@
   <system.serviceModel>
     <client>
       <endpoint binding="basicHttpBinding" contract="BBC.Dna.Api" name="CommentServiceEndPoint" />
+	  <endpoint binding="webHttpBinding" contract="BBC.Dna.SocialAPI.ITwitter" name="TwitterClient" bindingConfiguration="IncreasedTimeout"
+	  address="http://api.twitter.com/1" behaviorConfiguration="twitter"/>
     </client>
+	<bindings>
+		<webHttpBinding>
+			<binding name="IncreasedTimeout"
+					 sendTimeout="00:15:00" useDefaultWebProxy="true" bypassProxyOnLocal="false" 
+					 openTimeout="00:15:00" closeTimeout="00:15:00" receiveTimeout="00:15:00" maxReceivedMessageSize="65536000" >
+					  <security mode = "TransportCredentialOnly">
+						<transport clientCredentialType="Basic" realm="Twitter API" />
+					 </security>
+			</binding>
+		</webHttpBinding>
+	</bindings>
     <behaviors>
       <endpointBehaviors>
         <behavior name="RestServiceEndPointBehaviour">
           <webHttp />
+        </behavior>
+		<behavior name="twitter">
+          <webHttp />
+		  <dataContractSerializer maxItemsInObjectGraph="2147483647" />
         </behavior>
       </endpointBehaviors>
       <serviceBehaviors>
