--- a/Release/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
+++ b/Release/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
@@ -1280,6 +1280,9 @@
     <None Include="addTermsFilterUpdate.sql" />
     <None Include="addTermsFilterTerm.sql" />
     <None Include="commentratingcreate.sql" />
+    <None Include="CreateTweetInfoForComment.sql" />
+    <None Include="CreateTweetInfoForPremodPostings.sql" />
+    <None Include="GetCommentIdFromTweetId.sql" />
     <None Include="getcommentratingstats.sql" />
     <None Include="getmoderatingclassbyuser.sql" />
     <None Include="createnewuserfromtwitteruserid.sql" />
