--- a/Release/Source/Shared/BBC.Dna.Users/BBC.Dna.Users.csproj
+++ b/Release/Source/Shared/BBC.Dna.Users/BBC.Dna.Users.csproj
@@ -146,6 +146,10 @@
       <Project>{2CE05465-9B21-4CD9-A592-FABD2AD051B3}</Project>
       <Name>BBC.Dna.Sites %28Source\Shared\BBC.Dna.Sites\BBC.Dna.Sites%29</Name>
     </ProjectReference>
+    <ProjectReference Include="..\BBC.Dna.SocialAPI\BBC.Dna.SocialAPI.csproj">
+      <Project>{BD150CEF-5F42-4C4D-AA7D-C7760977DD4D}</Project>
+      <Name>BBC.Dna.SocialAPI %28Source\Shared\BBC.Dna.SocialAPI\BBC.Dna.SocialAPI%29</Name>
+    </ProjectReference>
     <ProjectReference Include="..\BBC.Dna.Utils\BBC.Dna.Utils.csproj">
       <Project>{52E9F388-5ED0-4D9C-9A7D-53F92EA21D1D}</Project>
       <Name>BBC.Dna.Utils %28Source\Shared\BBC.Dna.Utils\BBC.Dna.Utils%29</Name>
