--- a/Release/Source/Web Services/BBC.DNA.Services.Comments/BBC.DNA.Services.Comments.csproj
+++ b/Release/Source/Web Services/BBC.DNA.Services.Comments/BBC.DNA.Services.Comments.csproj
@@ -46,11 +46,6 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Reference DLLs\EnterpriseLibrary\Microsoft.Practices.EnterpriseLibrary.Logging.dll</HintPath>
     </Reference>
-    <Reference Include="saxon9api, Version=9.1.0.5, Culture=neutral, PublicKeyToken=e1fdd002d5083fe6, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\BBC.DNA\ReferenceDlls\saxon\saxon9api.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core">
@@ -130,6 +125,10 @@
     <ProjectReference Include="..\..\Shared\BBC.Dna.Sites\BBC.Dna.Sites.csproj">
       <Project>{2CE05465-9B21-4CD9-A592-FABD2AD051B3}</Project>
       <Name>BBC.Dna.Sites %28Source\Shared\BBC.Dna.Sites\BBC.Dna.Sites%29</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Shared\BBC.Dna.SocialAPI\BBC.Dna.SocialAPI.csproj">
+      <Project>{BD150CEF-5F42-4C4D-AA7D-C7760977DD4D}</Project>
+      <Name>BBC.Dna.SocialAPI %28Source\Shared\BBC.Dna.SocialAPI\BBC.Dna.SocialAPI%29</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Shared\BBC.Dna.Users\BBC.Dna.Users.csproj">
       <Project>{19609A9E-E93A-4106-8529-F3A6C7DE9BF7}</Project>
