--- a/Main/Source/Web Services/BBC.DNA.Dnapages/BBC.DNA.Dnapages.csproj
+++ b/Main/Source/Web Services/BBC.DNA.Dnapages/BBC.DNA.Dnapages.csproj
@@ -793,6 +793,13 @@
     <Compile Include="UserStatisticsPage.aspx.designer.cs">
       <DependentUpon>UserStatisticsPage.aspx</DependentUpon>
     </Compile>
+    <Compile Include="CommentsListPage.aspx.cs">
+      <DependentUpon>CommentsListPage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CommentsListPage.aspx.designer.cs">
+      <DependentUpon>CommentsListPage.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\BBC.Dna\BBC.DNA.csproj">
@@ -959,6 +966,7 @@
     <Content Include="ModerationEmailManagementPage.aspx" />
     <Content Include="TermsFilterImport.aspx" />
     <Content Include="TermsFilterAdmin.aspx" />
+    <Content Include="CommentsListPage.aspx" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\VisualStudio\v9.0\WebApplications\Microsoft.WebApplication.targets" />
