Stubbed response for the tweet module admin console's profile list page.

--- a/Main/Source/BBC.Dna/BBC.DNA.csproj
+++ b/Main/Source/BBC.Dna/BBC.DNA.csproj
@@ -128,6 +128,7 @@
     <Compile Include="ContentSignifAdminBuilder.cs" />
     <Compile Include="ContentSignifSettings.cs" />
     <Compile Include="ContentSignifSettingsParameters.cs" />
+    <Compile Include="TwitterProfileList.cs" />
     <Compile Include="UserReputationReportBuilder.cs" />
     <Compile Include="HostDashboardUserActivityFeed.cs" />
     <Compile Include="EditPostPageBuilder.cs" />
