--- a/Main/Source/Web Services/BBC.DNA.Dnapages/BBC.DNA.Dnapages.csproj
+++ b/Main/Source/Web Services/BBC.DNA.Dnapages/BBC.DNA.Dnapages.csproj
@@ -129,6 +129,13 @@
     <Compile Include="ContentSignifPage.aspx.designer.cs">
       <DependentUpon>ContentSignifPage.aspx</DependentUpon>
     </Compile>
+    <Compile Include="TwitterProfileListPage.aspx.cs">
+      <DependentUpon>TwitterProfileListPage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="TwitterProfileListPage.aspx.designer.cs">
+      <DependentUpon>TwitterProfileListPage.aspx</DependentUpon>
+    </Compile>
     <Compile Include="UserReputationReport.aspx.cs">
       <DependentUpon>UserReputationReport.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -947,6 +954,7 @@
     <Content Include="App_Data\forum scheduled closed.xml" />
     <Content Include="App_Data\test_template6music.htm" />
     <Content Include="App_Data\test_templateBlast.htm" />
+    <Content Include="TwitterProfileListPage.aspx" />
     <Content Include="UserReputationReport.aspx" />
     <Content Include="HostDashboardUserActivity.aspx" />
     <Content Include="EditPost.aspx" />
