--- a/Release/Source/Web Services/BBC.DNA.Dnapages/BBC.DNA.Dnapages.csproj
+++ b/Release/Source/Web Services/BBC.DNA.Dnapages/BBC.DNA.Dnapages.csproj
@@ -129,6 +129,20 @@
     <Compile Include="ContentSignifPage.aspx.designer.cs">
       <DependentUpon>ContentSignifPage.aspx</DependentUpon>
     </Compile>
+    <Compile Include="TwitterCreateProfilePage.aspx.cs">
+      <DependentUpon>TwitterCreateProfilePage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="TwitterCreateProfilePage.aspx.designer.cs">
+      <DependentUpon>TwitterCreateProfilePage.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="TwitterProfileListPage.aspx.cs">
+      <DependentUpon>TwitterProfileListPage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="TwitterProfileListPage.aspx.designer.cs">
+      <DependentUpon>TwitterProfileListPage.aspx</DependentUpon>
+    </Compile>
     <Compile Include="UserReputationReport.aspx.cs">
       <DependentUpon>UserReputationReport.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -793,6 +807,13 @@
     <Compile Include="UserStatisticsPage.aspx.designer.cs">
       <DependentUpon>UserStatisticsPage.aspx</DependentUpon>
     </Compile>
+    <Compile Include="CommentsListPage.aspx.cs">
+      <DependentUpon>CommentsListPage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CommentsListPage.aspx.designer.cs">
+      <DependentUpon>CommentsListPage.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\BBC.Dna\BBC.DNA.csproj">
@@ -940,6 +961,8 @@
     <Content Include="App_Data\forum scheduled closed.xml" />
     <Content Include="App_Data\test_template6music.htm" />
     <Content Include="App_Data\test_templateBlast.htm" />
+    <Content Include="TwitterCreateProfilePage.aspx" />
+    <Content Include="TwitterProfileListPage.aspx" />
     <Content Include="UserReputationReport.aspx" />
     <Content Include="HostDashboardUserActivity.aspx" />
     <Content Include="EditPost.aspx" />
@@ -959,6 +982,7 @@
     <Content Include="ModerationEmailManagementPage.aspx" />
     <Content Include="TermsFilterImport.aspx" />
     <Content Include="TermsFilterAdmin.aspx" />
+    <Content Include="CommentsListPage.aspx" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\VisualStudio\v9.0\WebApplications\Microsoft.WebApplication.targets" />
