--- a/Main/Web.config
+++ b/Main/Web.config
@@ -28,8 +28,8 @@
     <clear /> <!-- this stops inheritance from any other configuration files -->
     <add name="ContributionsEntities" connectionString="metadata=res://*/Contributions.csdl|res://*/Contributions.ssdl|res://*/Contributions.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.;Initial Catalog=TheGuide;Integrated Security=True;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
     <add name="Database" connectionString="database=smallguide; server=.; user id=ripley; password=p4ck3t0fthr333; pooling=false" providerName="System.Data.SqlClient" />
-    <add name="IdentityURL" connectionString="https://api.stage.bbc.co.uk/opensso/identityservices/IdentityServices;dna live;10.152.4.15:80;logging" providerName="" />
-     <!--<add name="IdentityURL" connectionString="https://api.test.bbc.co.uk/opensso/identityservices/IdentityServices;dna;http://www-cache.reith.bbc.co.uk:80;logging" providerName="" />-->
+    <!--<add name="IdentityURL" connectionString="https://api.stage.bbc.co.uk/opensso/identityservices/IdentityServices;dna live;10.152.4.15:80;logging" providerName="" />-->
+    <add name="IdentityURL" connectionString="https://api.test.bbc.co.uk/opensso/identityservices/IdentityServices;dna;http://www-cache.reith.bbc.co.uk:80;logging" providerName="" />
     <add name="ProfileRead" connectionString="server=ops-dbdev1.national.core.bbc.co.uk; port=3312; user id=profile; password=crudmeister; database=mdb; pooling=true" providerName="MySql.Data.MySqlClient" />
     <add name="ProfileWrite" connectionString="server=ops-dbdev1.national.core.bbc.co.uk; port=3312; user id=profile; password=crudmeister; database=mdb; pooling=true" providerName="MySql.Data.MySqlClient" />
 
@@ -77,7 +77,8 @@
 	<add key="TwitterPassword" value="WelCome12" />
 	
 	<!-- Buzz Profile API -->
-	<add key="BuzzProfileAPI" value="https://admin.int.bbc.co.uk/buzz/admin/profiles/" />
+	<add key="BuzzProfileAPI" value="https://admin.test.bbc.co.uk/buzz/admin/profiles/" />
+	<add key="BuzzCreateProfileAPI" value="https://admin.test.bbc.co.uk/buzz/admin/profile/" />
   </appSettings>
   <system.web>
 
