--- a/Main/Source/Web Services/BBC.DNA.Dnapages/BBC.DNA.Dnapages.csproj
+++ b/Main/Source/Web Services/BBC.DNA.Dnapages/BBC.DNA.Dnapages.csproj
@@ -129,12 +129,12 @@
     <Compile Include="ContentSignifPage.aspx.designer.cs">
       <DependentUpon>ContentSignifPage.aspx</DependentUpon>
     </Compile>
-    <Compile Include="TwitterCreateProfilePage.aspx.cs">
-      <DependentUpon>TwitterCreateProfilePage.aspx</DependentUpon>
+    <Compile Include="TwitterProfilePage.aspx.cs">
+      <DependentUpon>TwitterProfilePage.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="TwitterCreateProfilePage.aspx.designer.cs">
-      <DependentUpon>TwitterCreateProfilePage.aspx</DependentUpon>
+    <Compile Include="TwitterProfilePage.aspx.designer.cs">
+      <DependentUpon>TwitterProfilePage.aspx</DependentUpon>
     </Compile>
     <Compile Include="TwitterProfileListPage.aspx.cs">
       <DependentUpon>TwitterProfileListPage.aspx</DependentUpon>
@@ -961,7 +961,7 @@
     <Content Include="App_Data\forum scheduled closed.xml" />
     <Content Include="App_Data\test_template6music.htm" />
     <Content Include="App_Data\test_templateBlast.htm" />
-    <Content Include="TwitterCreateProfilePage.aspx" />
+    <Content Include="TwitterProfilePage.aspx" />
     <Content Include="TwitterProfileListPage.aspx" />
     <Content Include="UserReputationReport.aspx" />
     <Content Include="HostDashboardUserActivity.aspx" />
