Created the new ContactForms database table to hold the encrypted details. Updated the CommentForums view to return the contact form details for forums that are setup to be so. Created new ContactFormService endpoint in the Comments project. Updated the commentsforumlistbuilder to take an extra param that means it should show contact forms instead of comments. Updated the comments code so it knows how to create and post to contact forms versions of forums. Added tests for all new code paths. Updated the xsd for the new XML IsContactForm tags. Added new ApiExceptions for the contact forms. Modified all the comment storedprocedures to return a flag stating whether or no the forum is a contact form. Removed unused using statements from various files.

--- a/Main/Source/Web Services/BBC.DNA.Services.Comments/BBC.DNA.Services.Comments.csproj
+++ b/Main/Source/Web Services/BBC.DNA.Services.Comments/BBC.DNA.Services.Comments.csproj
@@ -94,6 +94,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommentsService.cs" />
+    <Compile Include="ContactFormService.cs" />
     <Compile Include="ReviewService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="samples\commentboxtestharness.aspx.designer.cs">
@@ -154,6 +155,7 @@
     <Content Include="status.aspx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="ContactFormService.svc" />
     <Content Include="memcachedstatus.aspx" />
     <Content Include="samples\commentboxtestharness.aspx" />
     <Content Include="samples\dna_comments.css" />
