--- a/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
+++ b/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
@@ -1265,6 +1265,7 @@
     <None Include="getcommentforumcachedependencycheck.sql" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="addencryptedcontactdetails.sql" />
     <None Include="addforumfilterterm.sql" />
     <None Include="ArchivePremodPosting.sql" />
     <None Include="cachegetarticleinfo2.sql" />
@@ -1283,13 +1284,16 @@
     <None Include="addTermsFilterUpdate.sql" />
     <None Include="addTermsFilterTerm.sql" />
     <None Include="commentratingcreate.sql" />
+    <None Include="contactformpostsreadbyforumid.sql" />
     <None Include="createretweetinfoforcomment.sql" />
     <None Include="createretweetinfoforpremodpostings.sql" />
     <None Include="CreateTweetInfoForComment.sql" />
     <None Include="CreateTweetInfoForPremodPostings.sql" />
     <None Include="doestwitteruserexists.sql" />
+    <None Include="getcontactformslist.sql" />
     <None Include="GetCommentIdFromTweetId.sql" />
     <None Include="getcommentratingstats.sql" />
+    <None Include="getcontactformthreads.sql" />
     <None Include="getmoderatingclassbyuser.sql" />
     <None Include="createnewuserfromtwitteruserid.sql" />
     <None Include="getalluserpostingstats4.sql" />
@@ -1307,6 +1311,7 @@
     <None Include="GetUserReputationList.sql" />
     <None Include="processexpiredpremodpostings.sql" />
     <None Include="SearchForTwitterUserViaScreenName.sql" />
+    <None Include="setcommentforumascontactform.sql" />
     <None Include="updatetrackedmemberformodclass.sql" />
     <None Include="GetUserReputation.sql" />
     <None Include="updatetrackedmemberlistinternal.sql" />
