--- a/Main/Tests/FunctionalTests.Services.Comments/FunctionalTests.Services.Comments.csproj
+++ b/Main/Tests/FunctionalTests.Services.Comments/FunctionalTests.Services.Comments.csproj
@@ -53,6 +53,9 @@
       <RequiredTargetFramework>3.0</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Runtime.Serialization.Formatters.Soap" />
+    <Reference Include="System.ServiceModel">
+      <RequiredTargetFramework>3.0</RequiredTargetFramework>
+    </Reference>
     <Reference Include="System.Web" />
     <Reference Include="System.XML" />
   </ItemGroup>
@@ -71,6 +74,10 @@
     <Compile Include="CommentsList.cs" />
     <Compile Include="comments_v1.cs" />
     <Compile Include="CommentsNeroRatings_v1.cs" />
+    <Compile Include="contactFormTests\ContactFormUtils.cs" />
+    <Compile Include="contactFormTests\createContactFormTests\createNewContactForm.cs" />
+    <Compile Include="contactFormTests\createNewContactDetailsTests\createNewContactDetailInForm.cs" />
+    <Compile Include="contactFormTests\getContactFormTests\getContactForm.cs" />
     <Compile Include="editorsPicks_v1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ratingForumTests\createRatingForumEntryTests\duplicationTests_v1.cs" />
