Updated the namespacing for the SocialAPI tests. Added try catch round failing article URL request to get better feed back on the error in test. Added tidy up code for one of the Tweet tests to see if that fixes the test run

--- a/Main/Tests/FunctionalTests.SocialAPI/FunctionalTests.SocialAPI.csproj
+++ b/Main/Tests/FunctionalTests.SocialAPI/FunctionalTests.SocialAPI.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{235D41BF-8288-42AC-B932-7D6E225DDAD0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FunctionalTests.SocialAPI.Tests</RootNamespace>
+    <RootNamespace>FunctionalTests.SocialAPI</RootNamespace>
     <AssemblyName>FunctionalTests.SocialAPI</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
