--- a/Main/Source/Shared/BBC.Dna.SocialAPI.Tests/BBC.Dna.SocialAPI.Tests.csproj
+++ b/Main/Source/Shared/BBC.Dna.SocialAPI.Tests/BBC.Dna.SocialAPI.Tests.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{A4F7704F-4932-473A-91DB-FEA3EA317DA7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FunctionalTests.SocialAPI.Tests</RootNamespace>
-    <AssemblyName>FunctionalTests.SocialAPI</AssemblyName>
+    <RootNamespace>BBC.Dna.SocialAPI.Tests</RootNamespace>
+    <AssemblyName>BBC.Dna.SocialAPI.Tests</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
