https://jira.dev.bbc.co.uk/browse/SPSDNA-90
Checking in the phase 2 contact forms as is for now. Work has been stoppped until after the olympics, so checking in changes so far.

* Created new classes to hold the code that used to be in the Comments classes. 
* Added new contracts for the Contact Forms so that it doesn't rely on the comments code/contracts.
* Create new storedprocedure to get existing contact form details instead of using the comments version. 
* Added the new specflow DLLs which allow us to write BBD tests via gerkin/cucumber

--- a/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
+++ b/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
@@ -1290,6 +1290,7 @@
     <None Include="CreateTweetInfoForComment.sql" />
     <None Include="CreateTweetInfoForPremodPostings.sql" />
     <None Include="doestwitteruserexists.sql" />
+    <None Include="getcontactformdetailfromformid.sql" />
     <None Include="getcontactformslist.sql" />
     <None Include="GetCommentIdFromTweetId.sql" />
     <None Include="getcommentratingstats.sql" />
