--- a/Main/Tests/FunctionalTests.Services.Comments/App.config
+++ b/Main/Tests/FunctionalTests.Services.Comments/App.config
@@ -33,4 +33,38 @@
       <add encryptionProviderName="" type="Microsoft.Practices.EnterpriseLibrary.Caching.BackingStoreImplementations.NullBackingStore, Microsoft.Practices.EnterpriseLibrary.Caching, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d" name="Null Storage" />
     </backingStores>
   </cachingConfiguration>
+  <appSettings>
+    <!-- The location of the xslt files - can be UNC -->
+    <add key="xslt_directory" value="http://local.bbc.co.uk:8081/dna/api/comments/xslt/2.0" />
+    <!-- The location of the web service -->
+    <add key="ServerBasePath" value="http://local.bbc.co.uk/dna/api/comments/CommentsService.svc" />
+    <!-- BBCUID key -->
+    <add key="SecretKey" value="simon_brickle" />
+    <!-- Path to log file directory -->
+    <add key="logfilepath" value="d:\temp\InputLogs" />
+    <!-- Proxy server to use -->
+    <add key="proxyserver" value="http://www-cache.reith.bbc.co.uk:80" />
+    <!-- If 1 then display .net errors - otherwise friendly error message will be sent -->
+    <add key="aspneterrors" value="1" />
+    <!-- Maximum number of ASPX concurrent requests -->
+    <add key="maxrequests" value="50" />
+    <!-- Memcached serverlist for functional tests -->
+    <add key="ServerList" value="127.0.0.1:11211" />
+    <!-- Secondary Memcached serverlist for functional tests -->
+    <add key="SecondaryMemcachedServer" value="10.161.68.132:11211" />
+    <!-- Maintence Mode enabled (1) or disabled (0) -->
+    <add key="MaintenanceMode" value="0" />
+    <!-- The length in minutes to cache items to the default cache manager -->
+    <add key="CacheSlidingWindow" value="5" />
+    <!-- The email group to which the notification email would be sent when the Terms section of the CommentsForumList gets updated -->
+    <add key="ModerateEmailGroup" value="Value provided by the Moderation team" />
+
+    <!-- Keys required for the twitter authentication -->
+    <add key="TwitterUserName" value="BBC_DNA_Search" />
+    <add key="TwitterPassword" value="WelCome12" />
+
+    <!-- Buzz Profile API -->
+    <add key="BuzzProfileAPI" value="https://admin.test.bbc.co.uk/buzz/admin/profiles/" />
+    <add key="BuzzCreateProfileAPI" value="https://admin.test.bbc.co.uk/buzz/admin/profile/" />
+  </appSettings>
 </configuration>
