--- a/Release/Web.config
+++ b/Release/Web.config
@@ -72,13 +72,14 @@
     <!-- The email group to which the notification email would be sent when the Terms section of the CommentsForumList gets updated -->
     <add key="ModerateEmailGroup" value="Value provided by the Moderation team"/>
     
-	<!-- Keys required for the twitter authentication -->
-	<add key="TwitterUserName" value="BBC_DNA_Search" />
-	<add key="TwitterPassword" value="WelCome12" />
-	
-	<!-- Buzz Profile API -->
-	<add key="BuzzProfileAPI" value="https://admin.test.bbc.co.uk/buzz/admin/profiles/" />
-	<add key="BuzzCreateProfileAPI" value="https://admin.test.bbc.co.uk/buzz/admin/profile/" />
+	  <!-- Keys required for the twitter authentication -->
+	  <add key="TwitterUserName" value="BBC_DNA_Search" />
+	  <add key="TwitterPassword" value="WelCome12" />
+
+    <!-- Buzz Profile Test API -->
+    <add key="BuzzProfileListAPI" value="https://admin.test.bbc.co.uk/buzz/admin/profiles/" />
+    <add key="BuzzProfileAPI" value="https://admin.test.bbc.co.uk/buzz/admin/profile/" />
+    
   </appSettings>
   <system.web>
 
